feat(auth): request grant to exchange for user access token (auth0)
