# src/routes/auth.ts
@@ -1,5 +1,7 @@
+import { JwtDto } from '@/dtos/jwt.js';
 import { FastifyTypebox } from '@/types/index.js';
 import { Type } from '@sinclair/typebox';
+import { plainToInstance } from 'class-transformer';
 import { FastifyPluginAsync } from 'fastify';
 
 const auth: FastifyPluginAsync = async (server: FastifyTypebox) => {
@@ -14,8 +16,24 @@ const auth: FastifyPluginAsync = async (server: FastifyTypebox) => {
         }),
       },
     },
-    async function (_, reply) {
-      return reply.status(401).send({ message: 'Unauthorized' });
+    async function (request, reply) {
+      const { email, password } = request.body;
+
+      const response = await server.auth0.authenticateUser(email, password);
+
+      if (response.isLeft()) {
+        return reply.status(response.value.status_code).send({
+          error: response.value.error,
+          message: response.value.error_description,
+          statusCode: response.value.status_code,
+        });
+      }
+
+      return reply.status(201).send({
+        data: plainToInstance(JwtDto, response.value, {
+          excludeExtraneousValues: true,
+        }),
+      });
     },
   );
 };
